--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,12 @@ body,
 .book-shelf-changer select {
   width: 100%;
   height: 100%;
+  background-color: #fd7f2c;
+  color: white;
+  font-family: sans-serif;
+  font-size: 18px;
+  outline: none;
+  font-weight: bold;
   opacity: 0;
   cursor: pointer;
 }
